--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,11 +1,214 @@
+@font-face {
+  font-family: 'proxima_nova_rgbold';
+  src: url('/fonts/proxima-nova/proximanova-bold-webfont.eot');
+  src: url('/fonts/proxima-nova/proximanova-bold-webfont.eot?#iefix')
+      format('embedded-opentype'),
+    url('/fonts/proxima-nova/proximanova-bold-webfont.woff') format('woff'),
+    url('/fonts/proxima-nova/proximanova-bold-webfont.ttf') format('truetype'),
+    url('/fonts/proxima-nova/proximanova-bold-webfont.svg#proxima_nova_rgbold')
+      format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'proxima_novasemibold';
+  src: url('/fonts/proxima-nova/proximanova-semibold-webfont.eot');
+  src: url('/fonts/proxima-nova/proximanova-semibold-webfont.eot?#iefix')
+      format('embedded-opentype'),
+    url('/fonts/proxima-nova/proximanova-semibold-webfont.woff2')
+      format('woff2'),
+    url('/fonts/proxima-nova/proximanova-semibold-webfont.woff') format('woff'),
+    url('/fonts/proxima-nova/proximanova-semibold-webfont.ttf')
+      format('truetype'),
+    url('/fonts/proxima-nova/proximanova-semibold-webfont.svg#proxima_novasemibold')
+      format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'proxima_novalight';
+  src: url('/fonts/proxima-nova/proximanova-light-webfont.eot');
+  src: url('/fonts/proxima-nova/proximanova-light-webfont.eot?#iefix')
+      format('embedded-opentype'),
+    url('/fonts/proxima-nova/proximanova-light-webfont.woff') format('woff'),
+    url('/fonts/proxima-nova/proximanova-light-webfont.ttf') format('truetype'),
+    url('/fonts/proxima-nova/proximanova-light-webfont.svg#proxima_novalight')
+      format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'proxima_nova_rgregular';
+  src: url('/fonts/proxima-nova/proximanova-regular-webfont.eot');
+  src: url('/fonts/proxima-nova/proximanova-regular-webfont.eot?#iefix')
+      format('embedded-opentype'),
+    url('/fonts/proxima-nova/proximanova-regular-webfont.woff') format('woff'),
+    url('/fonts/proxima-nova/proximanova-regular-webfont.ttf')
+      format('truetype'),
+    url('/fonts/proxima-nova/proximanova-regular-webfont.svg#proxima_nova_rgregular')
+      format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'proxima_novaregular_italic';
+  src: url('/fonts/proxima-nova/proximanova-regularitalic-webfont.eot');
+  src: url('/fonts/proxima-nova/proximanova-regularitalic-webfont.eot?#iefix')
+      format('embedded-opentype'),
+    url('/fonts/proxima-nova/proximanova-regularitalic-webfont.woff')
+      format('woff'),
+    url('/fonts/proxima-nova/proximanova-regularitalic-webfont.ttf')
+      format('truetype'),
+    url('/fonts/proxima-nova/proximanova-regularitalic-webfont.svg#proxima_novaregular_italic')
+      format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'proxima_nova_thinthin';
+  src: url('/fonts/proxima-nova/proximanovat-thin-webfont.eot');
+  src: url('/fonts/proxima-nova/proximanovat-thin-webfont.eot?#iefix')
+      format('embedded-opentype'),
+    url('/fonts/proxima-nova/proximanovat-thin-webfont.woff2') format('woff2'),
+    url('/fonts/proxima-nova/proximanovat-thin-webfont.woff') format('woff'),
+    url('/fonts/proxima-nova/proximanovat-thin-webfont.ttf') format('truetype'),
+    url('/fonts/proxima-nova/proximanovat-thin-webfont.svg#proxima_nova_thinthin')
+      format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'proxima_nova_condensedlight';
+  src: url('/fonts/proxima-nova/proximanovacond-light-webfont.eot');
+  src: url('/fonts/proxima-nova/proximanovacond-light-webfont.eot?#iefix')
+      format('embedded-opentype'),
+    url('/fonts/proxima-nova/proximanovacond-light-webfont.woff') format('woff'),
+    url('/fonts/proxima-nova/proximanovacond-light-webfont.ttf')
+      format('truetype'),
+    url('/fonts/proxima-nova/proximanovacond-light-webfont.svg#proxima_nova_condensedlight')
+      format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'proxima_nova_cn_rgregular';
+  src: url('/fonts/proxima-nova/proximanovacond-regular-webfont.eot');
+  src: url('/fonts/proxima-nova/proximanovacond-regular-webfont.eot?#iefix')
+      format('embedded-opentype'),
+    url('/fonts/proxima-nova/proximanovacond-regular-webfont.woff')
+      format('woff'),
+    url('/fonts/proxima-nova/proximanovacond-regular-webfont.ttf')
+      format('truetype'),
+    url('/fonts/proxima-nova/proximanovacond-regular-webfont.svg#proxima_nova_cn_rgregular')
+      format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'proxima_nova_condensedRgIt';
+  src: url('/fonts/proxima-nova/proximanovacond-regularit-webfont.eot');
+  src: url('/fonts/proxima-nova/proximanovacond-regularit-webfont.eot?#iefix')
+      format('embedded-opentype'),
+    url('/fonts/proxima-nova/proximanovacond-regularit-webfont.woff')
+      format('woff'),
+    url('/fonts/proxima-nova/proximanovacond-regularit-webfont.ttf')
+      format('truetype'),
+    url('/fonts/proxima-nova/proximanovacond-regularit-webfont.svg#proxima_nova_condensedRgIt')
+      format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'proxima_nova_condensedSBd';
+  src: url('/fonts/proxima-nova/proximanovacond-semibold-webfont.eot');
+  src: url('/fonts/proxima-nova/proximanovacond-semibold-webfont.eot?#iefix')
+      format('embedded-opentype'),
+    url('/fonts/proxima-nova/proximanovacond-semibold-webfont.woff')
+      format('woff'),
+    url('/fonts/proxima-nova/proximanovacond-semibold-webfont.ttf')
+      format('truetype'),
+    url('/fonts/proxima-nova/proximanovacond-semibold-webfont.svg#proxima_nova_condensedSBd')
+      format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'proxima_nova_cn_ththin';
+  src: url('/fonts/proxima-nova/proximanovacond-thin-webfont.eot');
+  src: url('/fonts/proxima-nova/proximanovacond-thin-webfont.eot?#iefix')
+      format('embedded-opentype'),
+    url('/fonts/proxima-nova/proximanovacond-thin-webfont.woff2')
+      format('woff2'),
+    url('/fonts/proxima-nova/proximanovacond-thin-webfont.woff') format('woff'),
+    url('/fonts/proxima-nova/proximanovacond-thin-webfont.ttf')
+      format('truetype'),
+    url('/fonts/proxima-nova/proximanovacond-thin-webfont.svg#proxima_nova_cn_ththin')
+      format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.proxima-nova {
+  font-family: 'proxima_nova_rgregular';
+}
+
+.proxima-nova-bold {
+  font-family: 'proxima_nova_rgbold';
+}
+
+.proxima-nova-semibold {
+  font-family: 'proxima_novasemibold';
+}
+
+.proxima-nova-thin {
+  font-family: 'proxima_nova_thinthin';
+}
+
+.proxima-nova-light {
+  font-family: 'proxima_novalight';
+}
+
+.proxima-nova-italic {
+  font-family: 'proxima_novaregular_italic';
+}
+
+.proxima-nova-condensed {
+  font-family: 'proxima_nova_cn_rgregular';
+}
+
+.proxima-nova-condensed-bold {
+  font-family: 'proxima_nova_condensedSBd';
+}
+
+.proxima-nova-condensed-thin {
+  font-family: 'proxima_nova_cn_ththin';
+}
+
+.proxima-nova-condensed-light {
+  font-family: 'proxima_nova_condensedlight';
+}
+
+.proxima-nova-condensed-italic {
+  font-family: 'proxima_nova_condensedRgIt';
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'proxima_nova_rgregular', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #eef0f2;
 }
 
 code {
