CSS changes for Home

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -211,6 +211,10 @@ body {
   background-color: #eef0f2;
 }
 
+main {
+  flex: 1;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
