--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,10 @@
 .App {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
+}
+
+.Main {
+  overflow-y: scroll;
 }
