--- a/frontend/src/Navbar/index.css
+++ b/frontend/src/Navbar/index.css
@@ -1,3 +1,8 @@
 .navbar-brand {
-  font-family: 'proxima_novasemibold';
+  font-size: 1.4rem;
+  font-family: 'proxima_nova_rgbold';
+}
+
+.Navlink {
+  font-size: 1.15rem;
 }
